--- a/budget-tracker/src/index.css
+++ b/budget-tracker/src/index.css
@@ -22,12 +22,35 @@ a:hover {
   color: #535bf2;
 }
 
+.home-container {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: top;
+  align-items: center;
+  gap: 1rem;
+  text-align: center;
+}
+
+.home-container h1 {
+  font-size: 3rem;
+  font-weight: bold;
+}
+
+.home-container button {
+  padding: 0.75rem 1.5rem;
+  font-size: 1.25rem;
+  cursor: pointer;
+}
+
+
 body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  justify-content: center;
 }
 
 h1 {
@@ -66,3 +89,5 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
